infrastructure/server/02-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: students-server-service
spec:
 selector:
  app: students-server
 ports:
 - name: students-server-port
   port: 5000
   targetPort: 5000
